<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/_25sdp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageEditorView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomSheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
     />

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close_fill_svg"
                android:contentDescription="@string/cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

            <ImageButton
                android:id="@+id/btnConfirm"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_confirm"
                android:contentDescription="@string/confirm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opacity"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"/>

            <SeekBar
                android:id="@+id/opacitySeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progressTint="@color/colorAds"
                android:max="100"
                android:progress="30"/>

            <TextView
                android:id="@+id/opacityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@drawable/bg_button_gradient"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageLoadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:indeterminate="true"
            android:indeterminateTint="@color/Brand400"
            android:indeterminateTintMode="src_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/changing_hair_color"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="@dimen/_190sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/our_ai_is_working_on_your_photo_this_will_take_a_while"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>