<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_no_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/im_not_network"/>

    <TextView
        android:id="@+id/no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/no_internet_connection"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/iv_no_net"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/check_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/please_turn_your_internet_on"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:background="@drawable/bg_selected_btn"
        android:fontFamily="@font/inter_semibold"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/try_again"
        android:textColor="@color/text_primary"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>