<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/card_bg"
    android:padding="@dimen/_2sdp">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_38sdp"
        android:layout_height="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rateustitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/thanks_for_feedback"
        android:textColor="@color/brand_text_primary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:fontFamily="@font/inter_medium"
        android:padding="2dp"
        android:text="@string/your_opinion_is_important"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateustitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ratingBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:padding="@dimen/_5sdp"
        app:boxStrokeColor="#F6F6F6"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoji">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/card_bg_stroke"
            android:clickable="true"
            android:cursorVisible="true"
            android:elevation="0dp"
            android:focusable="true"
            android:fontFamily="@font/inter_medium"
            android:gravity="top"
            android:hint="@string/leave_your_feedback_here"
            android:inputType="textMultiLine"
            android:minLines="10"
            android:overScrollMode="always"
            android:padding="7dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textColor="@color/brand_text_primary"
            android:textColorHint="@color/gray_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/exit_btn_rate"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/gSelector_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/cancle_btn_rate"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exit"
        app:layout_constraintTop_toTopOf="@+id/exit" />
</androidx.constraintlayout.widget.ConstraintLayout>
